# Py-HaloPSA

./: .env.template  README.md  conf.old.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  feature_request.yml
auth/: __init__.py
docs/source/: conf.py  index.rst
docs/source/development/: Resource.rst  base-resource.rst  clientresource.rst  core.rst  index.rst  resources.rst
docs/source/development/core/: auth.rst  utils.rst
docs/source/development/resources/: Resource.rst  base.rst  clients.rst
docs/source/user-guide/: index.rst  quick-start.rst
halo_api/: __init__.py  base.py  halo_properties.py  resources.py  settings.py  utils.py
halo_api/config/: auth.py  settings.py
halo_api/core/: auth.py  resources.py  utils.py
halo_api/resources/: __init__.py  base.py  clients.py
halo_psa/: __init__.py
halo_psa/api/: __init__.py  halo_resources.py
halo_psa/api/resources/: __init__.py  agents.py  assets.py  base_resource.py  clients.py
halo_psa/auth/: __init__.py
halo_psa/resources/: __init__.py  base_resource.py
halo_psa/utils/: __init__.py
pyHaloPSA/: .env.template  conf.old.py  pyproject.toml  requirements.txt
pyHaloPSA/halo_psa/: __init__.py  auth.py  exceptions.py  query_params.py  records.py  resources.py  settings.py  utils.py  validators.py
pyHaloPSA/halo_psa/api/: __init__.py
pyHaloPSA/halo_psa/api/resources/: agents.py  assets.py  clients.py  suppliers.py
pyHaloPSA/halo_psa/api/utils/: base_resource.py
pyHaloPSA/halo_psa/auth/: __init__.py  auth_utils.py
pyHaloPSA/halo_psa/config/: settings.py
pyHaloPSA/halo_psa/core/: __init__.py  base_data.py  base_resource.py
pyHaloPSA/halo_psa/exceptions/: __init__.py
pyHaloPSA/halo_psa/utils/: __init__.py  request_utils.py
pyHaloPSA/halopsa/: __init__.py
pyHaloPSA/halopsa/auth/: __init__.py
pyHaloPSA/halopsa/auth/utils/: __init__.py
pyHaloPSA/halopsa/config/: settings.py
pyHaloPSA/halopsa/core/: __init__.py  exceptions.py  validators.py
resources/: base_resource.py
utils/: __init__.py
