[project]
name = "pyHaloPSA"
version = "0.0.0"
authors = [{name = "Nate Schram", email="nate@sandboxedthoughts.com"}]
description = "Connect to the HaloPSA API in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-decouple",
  "requests",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]


[project.urls]
Homepage = "https://www.github.com/neschram/Py-Halo"
Issues = "https://www.github.com/neschram/Py-Halo/Issues"


[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
  /(
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | env/
    | venv/
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | templates
    | source
  )\
'''

[tool.isort]
profile="black"
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
default_section = "THIRDPARTY"
import_heading_future="future"
import_heading_stdlib="python"
import_heading_thirdparty="3rd party"
known_thirdparty = ["requests","python-decouple"]
import_heading_localfolder="local"
import_heading_firstparty="Py-HaloPSA"
known_firstparty = ["halo_api"]
sections= [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.coverage.run]
omit = []

[tool.coverage.html]
directory = "docs/coverage/"